--- a/build-client/index.html
+++ b/build-client/index.html
@@ -1,26 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <style>
-      html,
-			body {
-				padding: 0;
-				height: 100%;
-				width: 100%;
-				background-color: rgb(31, 28, 28);
-				overflow: hidden;
-			}
-			.centered {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      	padding: 0;
-				height: 100%;
-				background-color: rgb(31, 28, 28);
-			}
-			
-    </style>
+    <link rel="stylesheet" href="mystyle.css">    
   </head>
   <body>
     <div class = "centered" id="phaser-game">..</div>
