little more tuning

--- a/build-client/index.html
+++ b/build-client/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>phaser3template</title>
     <link rel="stylesheet" href="mystyle.css">    
   </head>
   <body>
